--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "highcharts": "^7.1.2",
+    "highcharts-react-official": "^2.2.2",
+    "history": "^4.9.0",
     "react": "^16.9.0",
+    "react-autocomplete": "^1.8.1",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-typeahead": "^3.4.6",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "react-tooltip": "^3.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
