--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-typeahead": "^3.4.6",
     "react-dom": "^16.9.0",
+    "react-loader-spinner": "^3.1.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-tooltip": "^3.10.0"
