--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^3.1.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-toastify": "^5.3.2",
     "react-tooltip": "^3.10.0"
   },
   "scripts": {
