--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-toastify": "^5.3.2",
-    "react-tooltip": "^3.10.0"
+    "react-tooltip": "^3.10.0",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
