--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://itools.ravikiranacharya --acl public-read"
+    "deploy": "aws s3 sync build/ s3://itools.ravikiranacharya.com --acl public-read"
   },
   "eslintConfig": {
     "extends": "react-app"
